tests/toylang/neg/001416_mutation.toylang
program a = { var a : do; } .
